syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message ListOrdersRequest {
  int64 page = 1;
  int64 limit = 2;
  string sort = 3;
}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrdersResponse {
  repeated Order Orders = 1;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
}